# GitDash

./: .gitignore  C cpp properties.json  CMakeList.txt  CMakeLists.txt  README.md  about.md  changelog.md  index.html  mod.json
.github/workflows/: build.yml
src/: SnapshotManager.cpp  SnapshotManager.hpp  SnapshotsManager.cpp  SnapshotsManager.hpp  TimelinePopup.cpp  TimelinePopup.hpp  main.cpp
